--- a/src/Components/SearchCollege/SearchCollege.css
+++ b/src/Components/SearchCollege/SearchCollege.css
@@ -167,11 +167,16 @@
     .college_input {
         height: 30px;
         width: 375px;
+        padding-left: 5px;
+        font-size: 22px;
+        font-family: 'Open Sans Condensed', sans-serif;
     }
 
     .state_dropdown {
         height: 36px;
         width: 250px;
+        font-size: 22px;
+        font-family: 'Open Sans Condensed', sans-serif;
     }
     
     .input_box {
