fixed cursor on search college page:

--- a/src/Components/SearchCollege/SearchCollege.css
+++ b/src/Components/SearchCollege/SearchCollege.css
@@ -80,7 +80,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    font-family: 'Open Sans Condensed', sans-serif;    
+    font-family: 'Open Sans Condensed', sans-serif;  
+    cursor: pointer;  
 }
 
 .school_name {
