--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -28,6 +28,7 @@ width: 100vw;
     display: flex;
     justify-content: space-around;
     flex-direction: row;
+    border-radius: 10px;
 
 }
 .boxes {
@@ -37,11 +38,11 @@ flex-direction: row;
 align-items: center;
 height: 80vh;
 width: 80vw;
+
 }
 .infoSide {
     z-index: 1;
     top:0;
-   
     height: 50vh;
     width: 30vw;
     display: flex;
@@ -81,10 +82,17 @@ width: 80vw;
     box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3);
     font-family: 'Open Sans Condensed', sans-serif;
     cursor: pointer;
-    
-    
+    user-select: none;
+    outline: none;
+    transition: .2s;
 }
-
+.loginButton:hover {
+background: white;
+}
+.loginButton:active {
+    background: #eee;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+}
 .title{
     font-size: 10vh;
     margin-right: 1vw;
