--- a/src/Components/SearchCollege/SearchCollege.css
+++ b/src/Components/SearchCollege/SearchCollege.css
@@ -1,77 +1,102 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300');
-
+.collegeHolder {
+    background: linear-gradient(to bottom right, #77c9d4 , #57bc90 );
+    display: flex;
+    justify-content: center;
+}
 .search_header {
+    margin-top: 10px;
     font-family: 'Amatic SC', cursive;
     font-weight: bold;
     background-color: white;
-    height: 45vh;
-    width: 100%;
+    min-height: 100vh;
+    width: 90vw;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    margin-bottom: 100px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .search_title {
     font-size: 35px;
     font-weight: bold;
     color: #015249;
-    margin-top: 90px;
+    padding-top: 50px;
+    
 }
 
 .search_inputs {
     height: 60%;
-    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: flex-start;
-    margin: 15px;
     color: #414141;
+    
 }
 
 .college_input_header {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
+    margin-right: 5px;
+    margin-top: 10px;
 }
 
 .college_input {
     border: 1px #414141 solid;
     border-radius: 5px;
-    margin-left: 5px;
-    width: 228px;
+    width: 220px;
     height: 25px;
+    outline: none;
+    margin-top: 10px;
 }
 
 .state_dropdown {
     width: 50px;
     border: 1px #414141 solid;
     font-size: 14px;
-    margin-left: 5px;
     padding: 2px;
     background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 95% 0;
     height: 30px;
     overflow: hidden;
     width: 187px;
+    outline: none;
 }
 
 .search_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Open Sans Condensed', sans-serif;
+    margin: 10px;
     margin-left: 25px;
-    border: 1px #57bc90 solid;
     border-radius: 5px;
-    background-color: #57BC90;
-    color: white;
+    background-color: #eee;
+    color: #414141;
     font-size: 16px;
     height: 30px;
     width: 65px;
+    cursor: pointer;
+    box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3);
+    outline: none;
+    margin-right: 0;
+    
 }
 
 .search_button:hover {
-    background-color: #015249
+    background-color: white;
+}
+.search_button:active {
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+    background: #eee;
+    
 }
 
 .displayed_colleges {
     /* background: linear-gradient(to bottom right, #57bc90, #77c9d4 ); */
-    background: lightgrey;
+    /* background: orange; */
     height: 100%;
 }
 
@@ -79,16 +104,28 @@
     text-align: left;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     font-family: 'Open Sans Condensed', sans-serif;  
-    cursor: pointer;  
+    border-radius: 5px;
+   
 }
+.colleges:hover {
+        background: #eee;
+    }
+
+    
+    .colleges a {
+        cursor: pointer;
+        text-decoration: none;
+        color: #77c9d4;
+    }
+
 
 .school_name {
     font-size: 22px;
     margin-top: 10px;
     margin-left: 15px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .dropdown {
@@ -100,14 +137,13 @@
     align-items: center;
 }
 
-.college_dropdown {
-    height: 80px;
+.state_dropdown {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    margin-left: 20px;
     font-size: 20px;
+    margin-top: 10px;
 }
 
 .fave_button {
@@ -115,7 +151,6 @@
 }
 
 .page_container {
-    background: lightgrey;
     padding-top: 25px;
     padding-bottom: 15px;
 }
@@ -123,30 +158,43 @@
 .num_container {
     width: 50%;
     overflow: scroll;
+    overflow-y: hidden;
     margin: auto;
 }
 
 .page_numbers {
     /* margin-right: 7px; */
-    padding: 4px;
-    border: black 1px solid; 
+    padding: 4px 10px;
+    border: rgba(0, 0, 0, 0.089) 1px solid; 
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 20px;
+    cursor: pointer;
+}
+.page_numbers:hover {
+    background: #57bc90;
+    color: white;
 }
 
-
+ .input_box {
+        display: flex;
+        align-items: space-between;
+        justify-content: space-around;
+        flex-direction: row; 
+    }
+        
 /* DESKTOP  */
 
 @media(min-width: 750px) {
     .search_inputs {
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: center;
+        align-items: center;
         margin-top: 50px;
     }
     
     .college_input {
-        margin-right: 25px;
+        margin-right: 15px;
     }
 
 }
@@ -154,38 +202,30 @@
 @media(min-width: 1100px) {
     .search_title {
         font-size: 50px;
+        line-height: 50px;
     }
-
-    .search_inputs {
-        margin-top: 110px;
-    }
-
     .college_input_header {
-        font-size: 30px;
-        margin-right: 10px;
+        font-size: 24px;
+        
+        
     }
 
     .college_input {
         height: 30px;
-        width: 375px;
-        padding-left: 5px;
+        width: 220px;
         font-size: 22px;
         font-family: 'Open Sans Condensed', sans-serif;
     }
 
     .state_dropdown {
-        height: 36px;
-        width: 250px;
+        height: 35px;
+        width: 220px;
         font-size: 22px;
         font-family: 'Open Sans Condensed', sans-serif;
     }
     
-    .input_box {
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-around;
-        margin-right: 25px;
-    }
+   
+    
 
     .search_button {
         height: 36px;
@@ -203,21 +243,26 @@
 
     .displayed_colleges {
         flex-direction: column;
-        width: 100vw;
+        width: 100%;
     }
     
     .colleges {
-        width: 40%;
-        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
         align-items: center;
+        width: 40%;
+        align-items: center;
+        
     }
 
-    .college_dropdown {
+    .state_dropdown {
         font-size: 23px;
+        width: 250px;
+        
     }
-
     .college_list {
-        width: 100vw;
+        width: 100%;
+        min-height: 600px;
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
@@ -231,10 +276,15 @@
         left: 50%;
         width: 1px;
         height: 90%;
-        background-color: black;
+        background-color: rgba(0, 0, 0, 0.3);
     }
 
     .dropdown {
         justify-content: space-around;
+    }
+}
+@media (max-width:750px) {
+    .college_input_header {
+        margin-left: 15px;
     }
 }
