--- a/src/Components/SearchScholarship/SearchScholarship.css
+++ b/src/Components/SearchScholarship/SearchScholarship.css
@@ -1,8 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300');
 
 .searchScholarship {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
+    background: linear-gradient(to bottom right, #77c9d4,#57bc90);
+}
+.scholl {
+    margin-left: 5vw;
+    width: 90vw;
+    background-color: white;
+    justify-content: center;
+    border-radius: 5px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+    padding-bottom: 100px;
+}
+.schollHolder {
+    /* padding-top: 70px; */
 }
 .schollTitle {
     font-family: 'Amatic SC', cursive;
@@ -21,18 +34,16 @@
     align-items: center;
     font-size: 40px;
     font-family: 'Open Sans Condensed', sans-serif;
-}
-.fa fa-arrow-circle-o-right {
-
+    border-bottom: thin solid #eee;
 }
 .schollLinksHolder {
     /* margin-left: 50px;
     margin-right: 50px; */
+    padding-top: 100px;
     justify-content: space-around;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    background-color: 
 }
 .schollLinksHolder a {
     text-decoration: none;
@@ -40,10 +51,17 @@
 }
 .schollLinksHolder a:hover {
     text-decoration: none;
-    color: red;
+    color: #77c9d4;
+    transition: 0.32s;
+
 }
 .individualLink {
-    font-size: 200px;
-    padding-right: 45px;
-    padding-left: 45px;
+    height: 30vh;
+    width: 30vw;
+    font-size: 175px;
+    padding-bottom: 100px;
+    /* border: thin solid black; */
+}
+.iconText {
+    font-size: 20px;
 }
